--- a/css/app.css
+++ b/css/app.css
@@ -51,7 +51,8 @@ body {
 }
 
 .building .icon.fas {
-  font-size: 3em;
+  font-size: 2.8em;
+  margin-right: 0.2em;
 }
 
 .building h2 {
@@ -76,7 +77,7 @@ body {
   margin-bottom: 2em;
 }
 
-.toast-build-finished {
+.toast {
   background-color: #f8f9fa !important;
   color: #664465 !important;
 }
