--- a/css/app.css
+++ b/css/app.css
@@ -7,13 +7,19 @@ body {
   background: linear-gradient(to right, #f2994a, #f2c94c);
 }
 
+.container {
+  margin-top: 2em;
+}
+
 .game-title {
   font-family: 'Pacifico', cursive;
   font-size: 3.5em;
+  text-align: center;
 }
 
-.container {
+.resource-bar {
   margin-top: 2em;
+  text-align: center;
 }
 
 .building {
@@ -26,6 +32,12 @@ body {
   box-shadow: 0.5em 0.5em 0.5em black;
   background-color: #664465;
   color: white;
+}
+
+@media (max-width: 767px) {
+  .building {
+    margin-left: 2em;
+  }
 }
 
 .building.inactive {
