--- a/css/app.css
+++ b/css/app.css
@@ -73,7 +73,8 @@ body {
 }
 
 .building .icon[class*='icofont'] {
-  font-size: 3em;
+  font-size: 2.9em;
+  margin-right: 0.2em;
 }
 
 .building .icon.fas {
